[project]
name = "aim_mcp_demo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "anthropic>=0.71.0",
    "fastmcp>=2.13.0",
    "langchain-core>=0.3.51",
    "langchain-mcp-adapters>=0.1.11",
    "langgraph>=0.3.27",
    "mcp[cli]>=1.6.0",
    "numpy>=2.2.4",
    "openai>=1.72.0",
    "pydantic-settings>=2.8.1",
    "python-dotenv>=1.1.0",
    "tavily-python>=0.5.4",
]

[tool.setuptools]
packages = ["langgraph_app", "core", "tools", "utils"]
